# kinderpowers

./: .gitignore  .gitmodules  CHANGELOG.md  DEVELOPING.md  GEMINI.md  KINDERPOWERS.xml  LICENSE  README.md  RELEASE-NOTES.md  plugin.json  scanner.py  setup.sh  test_scanner.py
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: FUNDING.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
agents/: code-reviewer.md  crucible-auditor.md  crucible-forecaster.md  crucible-verifier.md  gsd-codebase-mapper.md  gsd-debugger.md  gsd-executor.md  gsd-integration-checker.md  gsd-nyquist-auditor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-researcher.md  gsd-roadmapper.md  gsd-ui-auditor.md  gsd-ui-checker.md  gsd-ui-researcher.md  gsd-ui.md  gsd-user-profiler.md  gsd-verifier.md  multi-perspective-review.md  quality-gate.md  research-extractor.md  strategic-planner.md  team-coordinator.md
commands/: brainstorm.md  execute-plan.md  write-plan.md
docs/: gemini-compatibility.md  gsd-upstream-strategy.md  simulation-extensibility.md  testing.md
gsd/: CHANGELOG.md  VERSION
hookify-rules/: brainstorm-before-build.local.md  discovery-before-creation.local.md  verification-required.local.md
hooks/: agent-outcome-logger.py  (+1 more)
mcp-servers/github/: Cargo.toml
mcp-servers/github/scripts/: install.sh
mcp-servers/github/src/: auth.rs  compress.rs  format.rs  main.rs  server.rs  util.rs
mcp-servers/github/src/github/: client.rs  types.rs
mcp-servers/github/src/query/: ast.rs  mod.rs  parser.rs
mcp-servers/github/src/tools/: actions.rs  branches.rs  code_search.rs  commits.rs  files.rs  issues.rs  labels.rs  mod.rs  prs.rs  releases.rs  repos.rs  search_util.rs  tags.rs  teams.rs  user.rs
mcp-servers/github/tests/: live_integration.rs
mcp-servers/sequential-thinking/: CONTRIBUTING.txt  Cargo.toml  SELF_OPTIMIZING_PIPELINE.md
mcp-servers/sequential-thinking/src/: logging.rs  main.rs  profiles.rs  server.rs  thinking.rs
mcp-servers/sequential-thinking/tests/: integration.rs
skills/crucible/: SKILL.md  crucible.py  pyproject.toml  schema.sql
skills/crucible/agents/: challenger.md  composer.md  exploder.md  hunter.md
(+189 files in other folders)
