[package]
name = "kp-github-mcp"
version = "0.1.0"
edition = "2021"
description = "Token-compressed GitHub MCP server for Claude Code"
license = "MIT"

[[bin]]
name = "kp-github-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1.0.102"
schemars = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
# Force aws-lc-rs instead of ring (ring needs C compiler, crashes on WSL2)
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
wait-timeout = "0.2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
wiremock = "0.6"
proptest = "1"

[profile.release]
opt-level = 2
strip = true
