[package]
name = "kp-sequential-thinking"
version = "0.1.0"
edition = "2021"
description = "Enhanced Sequential Thinking MCP server with branching, exploration, and metathinking"
license = "MIT"

[[bin]]
name = "kp-sequential-thinking"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.release]
opt-level = 2
strip = true
