[project]
name = "crucible"
version = "0.1.0"
description = "Crucible — Research Intelligence Framework — 12 circuits, 7 agents"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
]

[project.scripts]
crucible = "crucible:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
